tests/snapshots/examples_fixtures/async__13_task_await.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/13_task_await.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
