tests/snapshots/examples_fixtures/async__14_task_cancel.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/14_task_cancel.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
