tests/snapshots/examples_fixtures/async__15_concurrent_jobs.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/15_concurrent_jobs.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
