tests/snapshots/examples_fixtures/async__16_current_worker_count.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/16_current_worker_count.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
