tests/snapshots/examples_fixtures/async__17_worker_diagnostic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/17_worker_diagnostic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
