tests/snapshots/examples_fixtures/async__18_task_closure_captures.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/async/18_task_closure_captures.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
