tests/snapshots/examples_fixtures/async__19_task_spawn_scoped.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/async/19_task_spawn_scoped.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
