tests/snapshots/examples_fixtures/async__20_task_spawn_root_reaper.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/20_task_spawn_root_reaper.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
