tests/snapshots/examples_fixtures/async__21_channel_capture.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/21_channel_capture.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
