tests/snapshots/examples_fixtures/async__22_select_channel_timer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/async/22_select_channel_timer.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
