tests/snapshots/examples_fixtures/async__23_select_send_recv.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/async/23_select_send_recv.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
