tests/snapshots/examples_fixtures/async__24_event_composition.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/async/24_event_composition.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
